Fix bug: replace navbar-light class in order to make hamburger icon visible in mobile view

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -152,6 +152,10 @@ h3 {
     transition: box-shadow 0.3s ease;
 }
 
+.nav-link {
+    color: var(--black) !important;
+}
+
 .nav-link:hover {
     color: var(--darkgrey);
     transform: scale(1.05);    
